--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ h1{
 }
 section{
     display: flex;
+    margin: 50px 60px 20px
 }
 .sec_one{
     width: 50%;
@@ -24,4 +25,7 @@ section{
     font-weight: 1000;
     padding: 10px 30px;
     border-radius: 8%;
+}
+h2{
+    text-align: center;
 }
