--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ h1{
 .First{
     color: maroon;
 }
+.border{
+    border-left: 5px solid rgb(41, 79, 82);
+
+}
 section{
     display: flex;
     margin: 50px 60px 20px
@@ -14,9 +18,11 @@ section{
 .sec_one{
     width: 50%;
     padding: 20px;
+    border-left: red;
 }
 .sec_one img{
     width: 80%;
+    height: 50%;
 }
 .link-button{
     text-decoration: none;
@@ -26,6 +32,28 @@ section{
     padding: 10px 30px;
     border-radius: 8%;
 }
+#color-1{
+    background-color: skyblue;
+    margin: 5px;
+    border-radius: 5px;
+}
+#color-2{
+    background-color: rgb(111, 109, 126);
+    margin: 5px;
+    border-radius: 5px;
+}
+#color-3{
+    background-color: rgb(140, 164, 173);
+    margin: 5px;
+    border-radius: 5px;
+}
 h2{
     text-align: center;
+    font: 700;
+}
+footer{
+    text-align: center;
+    background-color: sienna;
+    margin-top: 20%;
+    padding: 10px;
 }
